compeition and form

--- a/competition.html
+++ b/competition.html
@@ -81,7 +81,7 @@
                   <h1>Revisiting Dalieh<small>A CALL FOR ALTERNATIVE VISIONS ALONG BEIRUT’S COAST</small></h1>
                 </header>
               </div>
-              <p>LIn an effort to prevent the transformation of Dalieh – the last of the natural headlands overlooking Beirut’s emblematic Sakhret el-Raouche (Pigeon’s Rock)–to another private beach resort, the “Civil Campaign to Protect the Dalieh of Raouche” is launching this Ideas Competition to solicit visions for safeguarding Dalieh as a unique natural site and a shared open space. </p>
+              <p>In an effort to prevent the transformation of Dalieh – the last of the natural headlands overlooking Beirut’s emblematic Sakhret el-Raouche (Pigeon’s Rock)–to another private beach resort, the “Civil Campaign to Protect the Dalieh of Raouche” is launching this Ideas Competition to solicit visions for safeguarding Dalieh as a unique natural site and a shared open space. </p>
 
               <p>The Competition is an open call for architects, landscape architects, urbanists, planners, and other related environmental design disciplines. Participants are invited to articulate creative, sensitive, and environmentally sustainable design proposals for the conservation and future development of Dalieh. </p>
 
@@ -130,16 +130,24 @@
                  <li class="content-en"><i class="fa fa-file-archive-o"></i>Appendix 7 - Relevant Web Link</li>
                </a>
              </ul>
-           </div>
-         </div>
-       </div>
+
+             <p>To extract RAR files, please use the following applications:
+              <ul>
+                <li><a href="http://archiverapp.com" target="_blank">http://archiverapp.com (for Mac)</a></li>
+                <li><a href="http://www.7-zip.org" target= "_blank">http://www.7-zip.org  (for Windows) </a> </li>
+                <li><a href="http://peazip.sourceforge.net/peazip-linux.html" target="_blank">http://peazip.sourceforge.net/peazip-linux.html (for Linux)</a></li>
+              </ul>
+            </p>
+          </div>
+        </div>
+      </div>
 
 
-       <div class="row">
+      <div class="row">
         <div class="col-xs-12 col-md-12 col-sm-12">
           <div class=" container">
             <h3>Competition Jury</h3>
-            
+
 
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
               <h3 class="content-en"> Jad Chaaban </h3>
@@ -215,91 +223,98 @@
 
 
 
-     </div>
-   </div>
+      </div>
+    </div>
 
 
 
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-           <h3 class="content-en">Award</h3>
+       <h3 class="content-en">Award</h3>
 
-           <p class="content-en" >Jury members would select a number of entries that will be part of an open touring exhibition, starting with the Beirut Design Week, and will be posted on the website.  In recognition of their achievements, these shortlisted entries will be included in a publication for advocacy and will be publicly announced in a press release and during the exhibition opening event.   </p>
+       <p class="content-en" >Jury members would select a number of entries that will be part of an open touring exhibition, starting with the Beirut Design Week, and will be posted on the website.  In recognition of their achievements, these shortlisted entries will be included in a publication for advocacy and will be publicly announced in a press release and during the exhibition opening event.   </p>
 
 
-           <h3 class="content-en">Registration</h3>
+       <h3 class="content-en">Registration</h3>
 
-           <p class="content-en" >The registration form will be available starting Sunday March 29th. Please re-visit the site starting then to register.</p>
+       <p class="content-en" >
+        <!-- Change the width and height values to suit you best -->
+        <div class="typeform-widget" data-url="https://opengov.typeform.com/to/ABrgJQ" data-text="Registration Form" style="width:100%;height:500px;"></div>
+        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+        <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_ABrgJQ&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
 
-         </div>
 
-       </div>
+      </p>
+
+    </div>
+
+  </div>
 
 
 
   <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-       <h2 class="content-en">Schedule and milestones</h2>
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+     <h2 class="content-en">Schedule and milestones</h2>
 
-        <table class="table content-en  table-striped table-hover">
-            <tr > 
-              <td> Launching of Competition/Start of Registration </td>
-              <td> Tuesday, March 24, 2015</td>
-            </tr>
-            <tr> 
-              <td>Guided Site Visit (Optional)*</td>
-              <td>Saturday, April 4, 2015 and Saturday, April 18, 2015</td>
-            </tr>
-            <tr> 
-              <td> End of Registration</td>
-              <td>Tuesday, May 5, 2015</td>
-            </tr>
-            <tr> 
-              <td>End of Question Period: </td>
-              <td>Tuesday, April 28, 2015</td>
-            </tr>
-            <tr> 
-              <td> Reply to Questions </td>
-              <td>Tuesday, May 5, 2015</td>
-            </tr>
+     <table class="table content-en  table-striped table-hover">
+      <tr > 
+        <td> Launching of Competition/Start of Registration </td>
+        <td> Tuesday, March 24, 2015</td>
+      </tr>
+      <tr> 
+        <td>Guided Site Visit (Optional)*</td>
+        <td>Saturday, April 4, 2015 and Saturday, April 18, 2015</td>
+      </tr>
+      <tr> 
+        <td> End of Registration</td>
+        <td>Tuesday, May 5, 2015</td>
+      </tr>
+      <tr> 
+        <td>End of Question Period: </td>
+        <td>Tuesday, April 28, 2015</td>
+      </tr>
+      <tr> 
+        <td> Reply to Questions </td>
+        <td>Tuesday, May 5, 2015</td>
+      </tr>
 
-            <tr> 
-              <td>Deadline for Submission of Proposals </td>
-              <td>Tuesday, May 26, 2015</td>
-            </tr>
+      <tr> 
+        <td>Deadline for Submission of Proposals </td>
+        <td>Tuesday, May 26, 2015</td>
+      </tr>
 
-            <tr> 
-              <td>Jury Deliberations*</td>
-              <td>Saturday, May 30, 2015</td>
-            </tr>
+      <tr> 
+        <td>Jury Deliberations*</td>
+        <td>Saturday, May 30, 2015</td>
+      </tr>
 
-            <tr> 
-              <td>Announcement of Finalists/Press Release* </td>
-              <td>Monday, June 1, 2015</td>
-            </tr>
+      <tr> 
+        <td>Announcement of Finalists/Press Release* </td>
+        <td>Monday, June 1, 2015</td>
+      </tr>
 
-            <tr> 
-              <td>Exhibition Openingas Part of Beirut Design Week*</td>
-              <td>First week of June</td>
-            </tr>
+      <tr> 
+        <td>Exhibition Openingas Part of Beirut Design Week*</td>
+        <td>First week of June</td>
+      </tr>
 
-            <tr>
-              <td>Touring Exhibition Period*</td>
-              <td>Sunday, June 7 onwards</td>
-            </tr>
+      <tr>
+        <td>Touring Exhibition Period*</td>
+        <td>Sunday, June 7 onwards</td>
+      </tr>
 
-            <tr>
-              <td>*The exact date and time will be confirmed and communicated at a later stage.</td>
+      <tr>
+        <td>*The exact date and time will be confirmed and communicated at a later stage.</td>
+        <td> </td>
+      </tr>
+    </table>
 
-            </tr>
-          </table>
+  </div>
 
-      </div>
+</div>
 
-    </div>
-
- </div>
+</div>
 </div>
 <!-- /Services --> 
 
