--- a/competition.html
+++ b/competition.html
@@ -97,8 +97,8 @@
           <div class="row">
             <div class="col-xs-12 col-md-12 col-sm-12">
               <div class=" container">
-                <h3>Information packets</h3>
-                <p>You can download here the competition brief containing all pertinent information on the competition as well as various appendices.</p>
+                <h2  class = "content-en" >Information packets</h2>
+                <p class = "content-en">You can download here the competition brief containing all pertinent information on the competition as well as various appendices.</p>
                 <ul class="content-en">
                  <a href="assets/CompetitionBrief.pdf">
                   <li class="content-en"><i class="fa fa-file-pdf-o"></i>Competition Brief</li>
@@ -131,8 +131,8 @@
                </a>
              </ul>
 
-             <p>To extract RAR files, please use the following applications:
-              <ul>
+             <p class="content-en">To extract RAR files, please use the following applications:
+              <ul class="content-en" >
                 <li><a href="http://archiverapp.com" target="_blank">http://archiverapp.com (for Mac)</a></li>
                 <li><a href="http://www.7-zip.org" target= "_blank">http://www.7-zip.org  (for Windows) </a> </li>
                 <li><a href="http://peazip.sourceforge.net/peazip-linux.html" target="_blank">http://peazip.sourceforge.net/peazip-linux.html (for Linux)</a></li>
