footer safari rtl

--- a/competition.html
+++ b/competition.html
@@ -340,10 +340,10 @@
 
 <!-- Footer -->
 <footer>
-  <div class="container">
-    <div class="row">
+  <div class="container content-en">
+    <div class="row content-en">
       <div class="col-xs-12 col-md-9 col-sm-12">
-        <p> <a href="mailto:info@dalieh.org">Email General Inquiries: info@dalieh.org</a></p>
+        <p class="content-en"> <a href="mailto:info@dalieh.org">Email General Inquiries: info@dalieh.org</a></p>
       </div>
       <div class="col-xs-12 col-md-3 col-sm-12">
         <ul class="content-en footer_social clearfix">
