--- a/competition.html
+++ b/competition.html
@@ -48,7 +48,6 @@
     </head>
 
     <body data-spy="scroll" data-target=".navbar-default">
-
       <!-- Fixed navbar -->
       <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -78,9 +77,7 @@
             <div class="col-xs-12 col-md-12 col-sm-12">
               <div class="flexslider">
                 <ul class="slides">
-                  <li><img src="images/competition-header.jpg" alt="Dalieh Beirut" />
-
-                  </li>
+                  <li><img src="images/competition-header.jpg" alt="Dalieh Beirut" /> </li>
 
                 </ul>
               </div>
