--- a/competition.html
+++ b/competition.html
@@ -57,12 +57,12 @@
           </div>
           <div class="navbar-collapse collapse ">
             <ul class="nav navbar-nav navbar-right">
-              <li > <a class="content-en" href="index.html#daliet-beirut ">What is Dalieh</a> </li>
-              <li ><a class="content-ar" href="index.html#daliet-beirut ">دالية بيروت‬</a></li>
-              <li class="content-en"><a href="index.html#campaign">Campaign </a></li>
-              <li class="content-ar"><a href="index.html#campaign">الائتلاف‬ </a></li>
-              <li class="content-en active"><a href="competition.html">Competition </a></li>
-              <li class="content-ar"><a href="competition.html">الائتلاف‬ </a></li>
+              <li > <a class="content-en" href="http://dalieh.org/#daliet-beirut ">What is Dalieh</a> </li>
+              <li ><a class="content-ar" href="http://dalieh.org/#daliet-beirut ">دالية بيروت‬</a></li>
+              <li class="content-en"><a href="http://dalieh.org/#campaign">Campaign </a></li>
+              <li class="content-ar"><a href="http://dalieh.org/#campaign">الائتلاف‬ </a></li>
+              <li class="content-en active"><a href="#">Competition </a></li>
+              <li class="content-ar"><a href="#">الائتلاف‬ </a></li>
               <li id="language-switcher" current-language="EN"><a href="#">العربية</a></li>
             </ul>
           </div>
