form fixes and text align

--- a/competition.html
+++ b/competition.html
@@ -90,20 +90,20 @@
       <!-- Services -->
       <div id="services" class="services">
         <div class="container">
-          <div class="row">
+          <div class="row ">
             <div class="col-xs-12 col-md-12 col-sm-12">
               <div class=" container TitleSection">
                 <header class="page-head">
-                  <h1>Revisiting Dalieh<small>A CALL FOR ALTERNATIVE VISIONS ALONG BEIRUT’S COAST</small></h1>
+                  <h1 class="content-en">Revisiting Dalieh<small>A CALL FOR ALTERNATIVE VISIONS ALONG BEIRUT’S COAST</small></h1>
                 </header>
               </div>
-              <p>In an effort to prevent the transformation of Dalieh – the last of the natural headlands overlooking Beirut’s emblematic Sakhret el-Raouche (Pigeon’s Rock)–to another private beach resort, the “Civil Campaign to Protect the Dalieh of Raouche” is launching this Ideas Competition to solicit visions for safeguarding Dalieh as a unique natural site and a shared open space. </p>
+              <p class="content-en">In an effort to prevent the transformation of Dalieh – the last of the natural headlands overlooking Beirut’s emblematic Sakhret el-Raouche (Pigeon’s Rock)–to another private beach resort, the “Civil Campaign to Protect the Dalieh of Raouche” is launching this Ideas Competition to solicit visions for safeguarding Dalieh as a unique natural site and a shared open space. </p>
 
-              <p>The Competition is an open call for architects, landscape architects, urbanists, planners, and other related environmental design disciplines. Participants are invited to articulate creative, sensitive, and environmentally sustainable design proposals for the conservation and future development of Dalieh. </p>
+              <p class="content-en">The Competition is an open call for architects, landscape architects, urbanists, planners, and other related environmental design disciplines. Participants are invited to articulate creative, sensitive, and environmentally sustainable design proposals for the conservation and future development of Dalieh. </p>
 
-              <p>Competitors’ entries will provide a platform to open a public debate about open-access shared spaces and how these spaces can be designed, managed and sustained in ways that provide viable design alternatives to current practices along the coast of Lebanon. We urge multidisciplinary professionals and/or students, particularly those concerned with the public realm and the preservation of the natural environment, to participate in the competition. Competitors’ visions are anticipated to broaden the collective understanding of the meaning of place within a highly individualized market-driven urban geography in Lebanon. </p>
+              <p class="content-en">Competitors’ entries will provide a platform to open a public debate about open-access shared spaces and how these spaces can be designed, managed and sustained in ways that provide viable design alternatives to current practices along the coast of Lebanon. We urge multidisciplinary professionals and/or students, particularly those concerned with the public realm and the preservation of the natural environment, to participate in the competition. Competitors’ visions are anticipated to broaden the collective understanding of the meaning of place within a highly individualized market-driven urban geography in Lebanon. </p>
 
-              <p>The Competition is organized under the patronage of the Ministry of Environment. Other key supporters are: The Asfari Institute for Civil Society and Citizenship and the Nature Conservation Center at the American University of Beirut (AUB).</p>
+              <p class="content-en">The Competition is organized under the patronage of the Ministry of Environment. Other key supporters are: The Asfari Institute for Civil Society and Citizenship and the Nature Conservation Center at the American University of Beirut (AUB).</p>
 
             </div>
           </div>
