--- a/competition.html
+++ b/competition.html
@@ -161,86 +161,97 @@
 
       <div class="row">
         <div class="col-xs-12 col-md-12 col-sm-12">
-          <div class=" container">
-            <h3 class="content-en">Competition Jury</h3>
+          
+
+          <div class="content-en">
+              <h3 class="content-en">Competition Jury</h3>
+              <div class="row">
+
+               <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                <h3 class="content-en">Jad Chaaban<small>Associate Professor of Economics at the American University of Beirut</small></h3>
+                <p class="content-en"> <img class="jury-img" src="images/JadChaaban.jpg">Jad Chaaban is a Lebanese Economist and social activist. He is an Associate Professor of Economics at the American University of Beirut (AUB). His research and advocacy work focuses mostly on using evidence-based economics analysis to enhance the wellbeing of the most vulnerable groups in society. In 2014-2015 he served as the Lead Author of UNDP’s Arab Human Development Report 2015, a flagship publication authored by leading scholars, policymakers and opinion leaders working on the Arab countries. Chaaban holds a PhD in Economics from the Toulouse School of Economics (2004), a Master’s in Agricultural, Environmental and Natural Resources Economics (2001) from the same university, an MBA from the European School of Management (2000), and a BA in Economics from AUB (1999). He regularly writes about research and public policy issues on his personal website, and in local and international media.
+                </p>
+
+              </div>
 
 
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-              <h3 class="content-en"> Jad Chaaban </h3>
-              <p class="content-en"> <img class="jury-img" src="images/JadChaaban.jpg">Jad Chaaban is a Lebanese Economist and Social Activist. He is an Associate Professor of Economics at the American University of Beirut (AUB). His research and advocacy work focuses mostly on using evidence-based economics analysis to enhance the wellbeing of the most vulnerable groups in society. In 2014-2015 he served as the Lead Author of UNDP’s Arab Human Development Report 2015, a flagship publication authored by leading scholars, policymakers and opinion leaders working on the Arab countries. Chaaban holds a PhD in Economics from the Toulouse School of Economics (2004), a Master’s in Agricultural, Environmental and Natural Resources Economics (2001) from the same university, an MBA from the European School of Management (2000), and a BA in Economics from AUB (1999). He regularly writes about research and public policy issues on his personal website, and in local and international media.
+
+              <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                <h3  class="content-en">Hans Kienle<small>Professor of Landscape Architecture at the University of Stuttgart</small></h3>
+                <p  class="content-en"><img class="jury-img" src="images/HansKienle.jpg">Hans Kienle is Professor of landscape architecture at the University of Stuttgart and was lecturer at the University of Biberach.  He is the founder and leading partner of Kienleplan GmbH since 1983. With 40 years of experience in environmental design, landscape architecture, architecture and urban planning, Kienle has successfully participated in numerous national and international competitions and served as juror in architecture and landscape architecture competitions. He has projects in Saudi Arabia, Iraq, Yemen Arab Republic, Jordan and China. He was guest lecturer at the American University of Beirut and the Academy of Art, Hangzhou. He obtained a Master degree 
+
+                </p>
+              </div>
+
+
+
+
+            </div>
+            <div class="row">
+             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+              <h3  class="content-en">Marwan Ghandour<small>Professor of Architecture at Iowa State University</small></h3>
+              <p  class="content-en"><img class="jury-img" src="images/MarwanGhandour.jpg">Marwan Ghandour is a Professor of Architecture and director of graduate degrees in Urban Design and Sustainable Environments at Iowa State University. He teaches architectural and urban design studios and multidisciplinary theory seminars. Ghandour is a partner in the Beirut-based architectural firm Bawader Architects, which is involved in institutional building and urban design in Lebanon. His research and teaching is focused on the Middle East, the American Midwest and more recently on Latin America and East Africa, where he conducts theoretical research and develops urban regeneration proposals. His research interests include multidisciplinary theory on space, and the social, spatial and legislative constitution of the built environment. Ghandour holds an MSc in Architecture and Building Design from Columbia University, and a BArch from American University of Beirut.
               </p>
-
             </div>
 
 
 
+
+
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-              <h3  class="content-en">Hans Kienle </h3>
-              <p  class="content-en"> <img class="jury-img" src="images/HansKienle.jpg"> Hans Kienleholds a degree in architecture from the Technical University of Stuttgart. He worked in different architecture firms and is assistant professor at the University of Stuttgart. He is a member of the Chamber of Architects, and is a partner and senior architect at Luz Kienle Wirth landscape architects.  Since 1985, he is Managing Partner of Kienleplan. He has experience in environmental design, landscape architecture, architecture and urbanism. He has successfully participated in numerous national and international competitions.  He has projects in Saudi Arabia, Iraq, Yemen, and Jordan. He is lecturer at the University of Stuttgart since 1987, and professor at universities Biberach and Stuttgart since 2003. He has previously been a guest lecturer at the American University of Beirut and the Academy of Art, Hangzhou.
+              <h3  class="content-en"> Habib Debs<small>Architect, Engineer and Urban Planner</small></h3>
+              <p  class="content-en"><img class="jury-img" src="images/HabibDebs.jpg">Habib Debs is an architect, engineer and urban planner. He conducted for public and international institutions, in Lebanon, France and other countries in wthe Middle East and North Africa, several strategic planning processes including cities strategies, regional and local sustainable development plans, as well as urban design projects including heritage districts conservation, urban revitalization, post-war reconstruction, mix use city centers, soft mobility and public space design. His professional practice in Lebanon embraces volunteering to collaborate with civil society and local citizen groups to protect natural sites and preserve urban heritage in postwar recovery and reconstruction, notably in Beirut, Salima and Bint-Jbeil. He has taught architecture and urban planning at the American University of Beirut and Académie Libanaise des Beaux-Arts (ALBA).
 
               </p>
             </div>
+
 
 
 
 
           </div>
           <div class="row">
-           <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <h3  class="content-en">Marwan Ghandour </h3>
-            <p  class="content-en">Marwan Ghandour is a Professor of Architecture and Associate Dean for Academic Programs at the College of Design, Iowa State University. He teaches architectural and urban design studio and multidisciplinary theory seminars. Ghandour is a partner in the Beirut-based architectural firm Bawader Architects, which is involved in institutional building and urban design in Lebanon. His research and practice focus on two regions, the Middle East and the American Midwest where he conducts theoretical and historical research and develops urban regeneration proposals. His research interests includemultidisciplinary theory on space, and the social, spatial and legislative constitution of the built environment. Ghandourholds anMSc in Architecture and Building Design from Columbia University, and a BArch from American University of Beirut.
-            </p>
+
+
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+              <h3  class="content-en">Kathryn Moore<small>President of the International Federation of Landscape Architects (IFLA)</small></h3>
+              <p  class="content-en"><img class="jury-img" src="images/KathrynMoore.jpg">Kathryn Moore is the current president of the International Federation of Landscape Architects (IFLA) and chair of the IFLA working group to advise UNESCO and United Nations Agencies on the feasibility of an international landscape convention. Moore has contributed to the Council of Europe’s evaluation on the implementation of the European Landscape Convention. She was previously president of the Landscape Institute and 2008 and Thomas Jefferson Visiting Chair at the University of Virginia, she has published extensively on design quality, theory, education and practice. 
+
+              </p>
+            </div>
+
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+              <h3  class="content-en">Jad Tabet<small>Member of UNESCO World Heritage Committee</small></h3>
+              <p  class="content-en"><img class="jury-img" src="images/JadTabet.jpg">Jad Tabet an architect and member of UNESCO World Heritage Committee and Vice-President of Patrimoine Sans Frontières, an NGO based in Paris. He graduated in architecture from the American University of Beirut in 1969. He is a practicing architect and urban planner between Beirut and Paris and won several awards. He is a known critic of architecture, lecturing regularly and teaches at Sciences Po-Paris School of International Affairs. He has published extensively on Beirut and served as director of the Beirut Workshop School of Architecture Paris-Belleville.
+
+              </p>
+            </div>
+
           </div>
 
+          <div class="row">
 
 
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+              <h3  class="content-en">Jala Makhzoumi<small>Landscape Architect and Affiliate Faculty at American University of Beirut</small></h3>
+              <p  class="content-en"><img class="jury-img" src="images/JalaMakhzoumi.jpg">Jala Makhzoumi studied architecture in Baghdad, completed her master in Environmental Design at Yale University, and PhD in landscape architecture at Sheffield University. She advocates an expansive, developmental landscape approach to mediate community needs with ecosystem health, biodiversity protection and landscape heritage conservation. Her professional and academic expertise includes postwar recovery, energy efficient site planning and sustainable urban greening. Makhzoumi is affiliate faculty at American University of Beirut, and founding member and senior fellow in the Cambridge Center for Landscape and People. In 2013 Makhzoumi co-established UNIT44, a Lebanon based practice in architecture, landscape architecture, ecological planning and urban design.
+
+              </p>
+            </div>
 
 
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <h3  class="content-en"> Habib Debs </h3>
-            <p  class="content-en">Habib Debs is an architect, engineer and urban planner. He conducted for public and international institutions, in Lebanon, France and other countries in the Middle East and North Africa, several strategic planning processes including cities strategies, regional and local sustainable development plans, as well as urban design projects including heritage districts conservation, urban revitalization, post-war reconstruction, mix use city centers, soft mobility and public space design. His professional practice in Lebanon embraces volunteering to collaborate with civil society and local citizen groups to protect natural sites and preserve urban heritage in postwar recovery and reconstruction, notably in Beirut, Salima and Bint-Jbeil. He has taught architecture and urban planning at the American University of Beirut and Académie Libanaise des Beaux-Arts (ALBA).
-            </p>
-          </div>
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+              <h3  class="content-en">Nizar Saghieh<small>Lawyer, Researcher and Human Rights Activist</small></h3>
+              <p  class="content-en"><img class="jury-img" src="images/NizarSaghieh.jpg">Nizar Saghieh is leading lawyer, legal researcher and human rights activist. His primary focus includes the independence of the judiciary in Lebanon, the penal code, memory of war, social justice, and rights of the legally marginalized. In addition to his wide legal consulting portfolio, Saghieh is the founding member of the Legal Agenda and its executive director since 2011, a platform that monitors and analyses law and public policy in Lebanon and the Arab Region. 
+
+              </p>
+            </div>
 
 
-
-
+          </div>   
 
         </div>
-        <div class="row">
-
-
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <h3  class="content-en">Kathryn Moore</h3>
-            <p  class="content-en"><img class="jury-img" src="images/KathrynMoore.jpg">Kathryn Moore is the current president of the International Federation of Landscape Architecture (IFLA) and chair of the IFLA working group to advise UNESCO and United Nations Agencies on the feasibility of an international landscape convention. Moore has contributed to the Council of Europe’s evaluation on the implementation of the European Landscape Convention. She was previously president of the Landscape Institute and 2008 and Thomas Jefferson Visiting Chair at the University of Virginia, she has published extensively on design quality, theory, education and practice. 
-
-            </p>
-          </div>
-
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <h3  class="content-en">Jad Tabet</h3>
-            <p  class="content-en"><img class="jury-img" src="images/JadTabet.jpg">  Jad Tabet holds a degree in Architecture from the American University of Beirut.  His professional practice focuses on planning, heritage and landscape protection, requalification sensitive sites, and intervention in heritage urban fabrics. Tabet has served as an expert to the UNESCO World Heritage since 2006 and was member of the World Heritage Committee of UNESCO.  He is director of Patrimoine sans Frontières since 1992. He holds many awards, among them the National Gold Prism Award, Award of the French Ministry of Culture for the rehabilitation of the Housing, and Urban Planning Award from Le Moniteur for the development of public spaces of ZAC Reuilly in Paris 12th (with Roland Schweitzer). Tabet has taught at the American University of Beirut and the Lebanese University.  He has published extensively on Beirut and served as director of the Beirut Workshop School of Architecture Paris-Belleville.
-
-            </p>
-          </div>
-
-        </div>
-
-        <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-            <h3  class="content-en">Jala Makhzoumi</h3>
-            <p  class="content-en">Jala Makhzoumi studied architecture in Baghdad, completed her master in Environmental Design at Yale University, and PhD in landscape architecture at Sheffield University. She advocates an expansive, developmental landscape approach to mediate community needs with ecosystem health, biodiversity protection and landscape heritage conservation. Her professional and academic expertise includes postwar recovery, energy efficient site planning and sustainable urban greening. Makhzoumi is affiliate faculty at American University of Beirut, and founding member and senior fellow in the Cambridge Center for Landscape and People. In 2013 Makhzoumi co-established UNIT44, a Lebanon based practice in architecture, landscape architecture, ecological planning and urban design.
-
-            </p>
-          </div> 
-        </div>
-
-
-
-
-
       </div>
-    </div>
 
 
 
@@ -256,9 +267,11 @@
 
        <p class="content-en" >
         <!-- Change the width and height values to suit you best -->
-        <div class="typeform-widget" data-url="https://opengov.typeform.com/to/ABrgJQ" data-text="Registration Form" style="width:100%;height:500px;"></div>
-        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
-        <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_ABrgJQ&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
+
+	<!-- Change the width and height values to suit you best -->
+<div class="typeform-widget" data-url="https://dalieh.typeform.com/to/ABrgJQ" data-text="Registration Form" style="width:100%;height:500px;"></div>
+<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+    <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;">Powered by <a href="http://www.typeform.com/?utm_campaign=typeform_ABrgJQ&amp;utm_source=website&amp;utm_medium=typeform&amp;utm_content=typeform-embedded&amp;utm_term=English" style="color: #999" target="_blank">Typeform</a></div>
 
 
       </p>
@@ -280,7 +293,7 @@
       </tr>
       <tr> 
         <td>Guided Site Visit (Optional)*</td>
-        <td>Saturday, April 4, 2015 and Saturday, April 18, 2015</td>
+        <td>Saturday, April 18, 2015</td>
       </tr>
       <tr> 
         <td> End of Registration</td>
@@ -321,7 +334,7 @@
       </tr>
 
       <tr>
-        <td>*The exact date and time will be confirmed and communicated at a later stage.</td>
+        <td>* The April 18th visit will be at 3pm next to the entrance of the Bay Rock café. Those wishing to attend the site visit need to register by sending an email to info@dalieh.org</td>
         <td> </td>
       </tr>
     </table>
