--- a/index.html
+++ b/index.html
@@ -167,41 +167,48 @@
               </div>
 
               <div class="col-md-4 col-lg-4">
+
                 <div class="row">
                   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                   <img src="images/dalieh-1.jpg" class="img-responsive">
-                 </div>
-               </div>
+                  <img src="images/dalieh-1.jpg" class="img-responsive">
+                  </div>
+                </div>
 
-               <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                 <img src="images/dalieh-2.jpg" class="img-responsive">
-               </div>
-             </div>
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                  <img src="images/dalieh-2.jpg" class="img-responsive">
+                  </div>
+                </div>
 
-             <div class="row content-en" >
-              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-               <img src="images/dalieh-3.jpg" class="img-responsive">
-             </div>
-           </div>
+                <div class="row content-en" >
+                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                  <img src="images/dalieh-3.jpg" class="img-responsive">
+                  </div>
+                </div>
 
-           <div class="row content-en">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-             <img src="images/dalieh-4.jpg" class="img-responsive">
-           </div>
-         </div>
+                <div class="row content-en">
+                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                  <img src="images/dalieh-4.jpg" class="img-responsive">
+                  </div>
+                </div>
+                
+                <div class="row">
+                  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                  <img src="images/dalieh-5.jpg" class="img-responsive">
+                </div>
 
+              </div>
 
-
-         <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-           <img src="images/dalieh-5.jpg" class="img-responsive">
-         </div>
-       </div>
-
-
+       
 
      </div>
+
+<h3 class="content-en">Legal Timeline</h3>
+
+ <p class="content-en">
+        <iframe src='http://cdn.knightlab.com/libs/timeline/latest/embed/index.html?source=0AsV5nEvx1TJedEU4d2Mwb3ItRktmMnVxZ05zaEtjdGc#gid&font=DroidSerif-DroidSans&maptype=toner&lang=en&height=650' width='100%' height='650' frameborder='0'></iframe>
+        </p>
+
 
    </div>
  </div>
@@ -215,7 +222,7 @@
 <div class="container-fluid">
   <div class="row">
    <div id="bg-1" class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-     <div class="content-en col-sm-6 col-sm-offset-3 text-center"><h2 style="padding:20px;background-color:rgba(5,5,5,.8)">Minet al-Dalieh and Raouchee form a unique landscape ensemble in Beirut</h2></div>
+     <!--- <div class="content-en col-sm-6 col-sm-offset-3 text-center"><h2 style="padding:20px;background-color:rgba(5,5,5,.8)">Al-Dalieh is Beirut's last untouched shoreline</h2></div> -->
    </div>
  </div>
 </div>
