--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                 <li class="content-en"><a href="competition.html">Competition </a></li>
               
-
+                <li class="content-ar"><a href="competition.html">المسابقة المفتوحة </a></li>
 
 
                
