--- a/competition.html
+++ b/competition.html
@@ -53,7 +53,8 @@
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-            <a class="navbar-brand logo" href="index.html">Civil Campaign to Protect Dalieh</a>
+            <a class="navbar-brand content-en logo" href="index.html">Civil Campaign to Protect Dalieh</a>
+            <a class="navbar-brand content-ar logo" href="index.html">الحملة الأهلية للحفاظ على دالية الروشة</a>
           </div>
           <div class="navbar-collapse collapse ">
             <ul class="nav navbar-nav navbar-right">
