--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <link href="css/timeline.css" rel="stylesheet">
 
       <link href="css/custom.css" rel="stylesheet">
+       <link href="css/component.css" rel="stylesheet">
       <link href="css/ar.css" rel="stylesheet">
     </head>
 
@@ -379,7 +380,7 @@
 
                           <ul  class="content-en">
                             <li  class="content-en">
-                              <div class="icon_ser"> <a href="#set-3" class="hi-icon hi-icon-images">Images</a> </div>
+                              <div class="icon_ser"> <a href="#set-3" class="hi-icon hi-icon-chat">Images</a> </div>
                               <div class="wrap">
                                 <h3 class="content-en">Spread the word</h3>
                                 <p  class="content-en">Use your networks on social media to talk about Dalieh, whether if it is to post pictures, tell stories or even to pose questions. Use the hashtag #SaveDalieh so that we can keep track of these conversations. </p>
@@ -416,7 +417,7 @@
                           <ul  class="content-en">
 
                             <li  class="content-en" >
-                              <div class="icon_ser"> <a href="#set-3" class="hi-icon hi-icon-pencil"></a> </div>
+                              <div class="icon_ser"> <a href="#set-3" class="hi-icon hi-icon-contract"></a> </div>
                               <div class="wrap">
                                 <h3>Participate in the competition</h3>
                                 <p>We are organizing an urban and landscape design competition to provide alternative uses for the Dalieh peninsula, to dream and re-imagine how this space can be used to serve the public, rather than solely private interests. Help us not only call for change, but also provide a solid path to get there and serve our community.   </p>
