--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                               </div>
                             </li>
                             <li>
-                              <div class="icon_ser"> <a href="#set-3" class="hi-icon hi-icon-location">Location</a> </div>
+                              <div class="icon_ser"> <a href="#set-3" class="hi-icon hi-icon-list">Location</a> </div>
                               <div class="wrap">
                                 <h3>Rally for Dalieh</h3>
                                 <p>Talk to your friends and colleagues about the issue of Dalieh and the seafront, and contact us to set up a meeting. Let us know if you think your workplace or institution would be interested in hosting us for a presentation and discussion about Dalieh. </p>
@@ -443,14 +443,14 @@
 
                         <ul  class="content-ar">
                           <li  class="content-ar">
-                            <div class="icon_ser"> <a href="#set-3" class="hi-icon hi-icon-images">Images</a> </div>
+                            <div class="content-ar icon_ser"> <a href="#set-3" class="hi-icon hi-icon-chat">Images</a> </div>
                             <div class="wrap">
                               <h3 class="content-ar">انشر/ي الوعي</h3>
                               <p  class="content-ar">إستخدم/ي الشبكات الخاصة بك على منصّات التواصل الاجتماعي للحديث عن الدالية، سواء كان بنشر الصور، أو سرد القصص، أو حتى طرح الأسئلة. إعتمد/ي هاشتاغ SaveDalieh# ليسهل علينا متابعة النقاشات المرتبطة بالموضوع. فكلّما كثر عدد الناس الذين يتحدثون ويطرحون الأسئلة عن الدالية، ازداد الضغط على المسؤولين/ات في القطاعين الخاص والعام لتقديم الاجابات.</p>
                             </div>
                           </li>
                           <li  class="content-ar">
-                            <div class="icon_ser"> <a href="#set-3" class="hi-icon hi-icon-pencil">Edit</a> </div>
+                            <div class="content-ar icon_ser"> <a href="#set-3" class="hi-icon hi-icon-pencil">Edit</a> </div>
                             <div class="wrap">
                               <h3 class="content-ar">شارك/ي القصص عن الدالية</h3>
                               <p>
@@ -463,7 +463,7 @@
                           <ul  class="content-ar">
 
                             <li>
-                              <div class="icon_ser"> <a href="#set-3" class="hi-icon hi-icon-location">Location</a> </div>
+                              <div class="content-ar icon_ser"> <a href="#set-3" class="hi-icon hi-icon-mail">Location</a> </div>
                               <div class="wrap">
                                 <h3>انضم/ي الى قائمتنا البريدية</h3>
                                 <p>إحضر/ي اجتماعاتنا و/أو تطوع/ي في النشاطات التي ننظّمها. اطّلع/ي على أحدث الأخبار من خلال الاشتراك بقائمتنا البريدية. نحن بحاجة الى أكبر عدد ممكن من المتطوعين/ات من المهنيين/ات والمواطنين/ات المهتمين/ات. كلما ازداد عددنا إزداد معه الضغط على صنّاع القرار للإصغاء إلينا والاجابة على أسئلتنا.</p>
@@ -472,7 +472,7 @@
 
 
                             <li  class="content-ar" >
-                              <div class="icon_ser"> <a href="#set-3" class="hi-icon hi-icon-pencil"></a> </div>
+                              <div class="content-ar icon_ser"> <a href="#set-3" class="hi-icon hi-icon-list"></a> </div>
                               <div class="wrap">
                                 <h3>احشد/ي من أجل الدالية</h3>
                                 <p>
@@ -486,7 +486,7 @@
                             <ul  class="content-ar">
 
                               <li  class="content-ar" >
-                                <div class="icon_ser"> <a href="#set-3" class="hi-icon hi-icon-pencil"></a> </div>
+                                <div class="content-ar icon_ser"> <a href="#set-3" class="hi-icon hi-icon-contract"></a> </div>
                                 <div class="wrap">
                                   <h3>شارك/ي في المسابقة</h3>
                                   <p>
