competition brief header

--- a/competition.html
+++ b/competition.html
@@ -129,7 +129,7 @@
                 <ul>
 
                  <a href="assets/CompetitionBrief.pdf">
-                  <li class="content-en"><i class="content-en fa fa-file-pdf-o"></i>Competition Brief</li>
+                  <li id="competition-brief" class="content-en"><i class="content-en fa fa-file-pdf-o"></i>Competition Brief</li>
                 </a>
 
 
@@ -383,7 +383,7 @@
         <ul>
 
 
-         <a href="assets/CompetitionBrief.pdf"> <li class="content-ar"><i class="fa fa-file-archive-o"></i>الملف المفصل عن المسابقة</li></a>
+         <a href="assets/CompetitionBrief.pdf"> <li id="competition-brief" class="content-ar"><i class="fa fa-file-archive-o"></i>الملف المفصل عن المسابقة</li></a>
 
 
          <a href="assets/APPENDIX 1 - Landscape Characteristics.rar">
