competition brief header

--- a/competition.html
+++ b/competition.html
@@ -383,11 +383,11 @@
         <ul>
 
 
-         <a href="assets/CompetitionBrief.pdf"> <li id="competition-brief" class="content-ar"><i class="fa fa-file-archive-o"></i>الملف المفصل عن المسابقة</li></a>
+         <a href="assets/CompetitionBrief.pdf"> <li id="competition-brief" class="content-ar"><i class="fa fa-file-pdf-o"></i>الملف المفصل عن المسابقة</li></a>
 
 
          <a href="assets/APPENDIX 1 - Landscape Characteristics.rar">
-           <li class="content-ar"><i class="fa fa-file-pdf-o"></i>الملحق ١ - خصائص المشهد الطبيعي للدالية</li> 
+           <li class="content-ar"><i class="fa fa-file-archive-o"></i>الملحق ١ - خصائص المشهد الطبيعي للدالية</li> 
          </a>
 
 
