--- a/competition.html
+++ b/competition.html
@@ -352,7 +352,7 @@
     </table>
 
       
-       * The April 18th visit will be at 3pm next to the entrance of the Bay Rock café. Those wishing to attend the site visit need to register by sending an email to info@dalieh.org</td>
+       <p class="content-en"> * The April 18th visit will be at 3pm next to the entrance of the Bay Rock café. Those wishing to attend the site visit need to register by sending an email to info@dalieh.org</p>
        
   </div>
 
